[gd_scene load_steps=2 format=3 uid="uid://v7txhto270sl"]

[ext_resource type="Script" path="res://GDScript/MenuScript/MainControl.gd" id="1_r62ga"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r62ga")

[node name="WelcomeText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 890.0
offset_top = 260.0
offset_right = 1123.0
offset_bottom = 283.0
text = "Welcome to Carbon Control"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 912.0
offset_top = 318.0
offset_right = 1102.0
offset_bottom = 361.0
text = "Continue"

[node name="LeaveButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 911.0
offset_top = 477.0
offset_right = 1101.0
offset_bottom = 520.0
text = "Leave the game"

[node name="SettingsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 911.0
offset_top = 424.0
offset_right = 1101.0
offset_bottom = 467.0
text = "Settings"

[node name="CreditsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1699.0
offset_top = 24.0
offset_right = 1889.0
offset_bottom = 67.0
text = "Credits"

[node name="NewGameButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 911.0
offset_top = 371.0
offset_right = 1101.0
offset_bottom = 414.0
text = "New Game"
